kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: magento
  labels:
    app.kubernetes.io/name: magento2
    app.kubernetes.io/part-of: ecommerce
    environment: production
    pod-security.kubernetes.io/enforce: baseline
