kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magento-service
  namespace: magento
  labels:
    app.kubernetes.io/name: magento2
    app.kubernetes.io/component: web-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: magento2
    app.kubernetes.io/component: web-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
